# pkg-python-util

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTE.md  LICENSE  Pipfile  README.md  anaconda-project.yml  environment-dev-export.yml  environment-dev.yml  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  requirements-freeze-venv.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: anacondaBuildDeploy.yml  cocusaurusBuildDeploy.yml  docusaurusBuildDeploy.yml  pypiBuildDeploy.yml  sphinxBuildDeploy.yml
_sources/: index.rst.txt
_sources/api/: atpthings.dict.get_keys.rst.txt  atpthings.dict.get_keys_as_list.rst.txt  atpthings.dict.get_values.rst.txt  atpthings.dict.get_values_from_dict_list.rst.txt  atpthings.dict.list_to_dict.rst.txt  atpthings.dict.load.rst.txt  atpthings.dict.save.rst.txt  atpthings.util.dictionary.convert_list_to_dict.rst.txt  atpthings.util.dictionary.get_keys.rst.txt  atpthings.util.dictionary.get_values.rst.txt  dict.convert.rst.txt  dict.io.rst.txt  dictionary.rst.txt
_sources/introduction/: index.md.txt
_static/: documentation_options.js
api/: atpthings.dict.get_keys.html  atpthings.dict.get_keys_as_list.html  atpthings.dict.get_values.html  atpthings.dict.get_values_from_dict_list.html  atpthings.dict.list_to_dict.html  atpthings.dict.load.html  atpthings.dict.save.html  atpthings.util.dictionary.get_values.html  dict.convert.html  dict.get.html  dict.html  dict.io.html  index.html
assets/js/: 18c41134.9a8a54a7.js  7661071f.4e20f7a8.js  d9f32620.50c517b1.js  dff1c289.975fa5e7.js  e44a2883.530169ec.js  main.f48fd4d3.js  runtime~main.70b495e6.js
atpthings/: __init__.py  _version.py  example123.py
atpthings/client_redis/: __init__.py
atpthings/database/: data_entity.py
atpthings/dict/: __init__.py  convert.py  get.py  io.py
atpthings/util/: __init__.py  dataframe.py  dictionary.py
blog/: index.html
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
conda.recipe/: meta.yaml
data_samples/: dict_sample_001.json  dict_sample_002.ini
dev/: atp_data_entity.py  atp_data_timeseries.py  atp_dict_io.py  atp_dict_io_json.py  atp_dict_io_yml.py  atp_dict_manipulation.py  dev_atp_dict.py
dev/tmp/: dict_sample_001.x_yml
docs/intro/: index.html
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-blog-post/: index.html
docs/tutorial-basics/create-a-document/: index.html
docs/tutorial-basics/create-a-page/: index.html
docs/tutorial-basics/deploy-your-site/: index.html
docs/tutorial-basics/markdown-features/: index.html
docs/tutorial-extras/manage-docs-versions/: index.html
docs/tutorial-extras/translate-your-site/: index.html
doctrees/: gettingStarted.doctree  index.doctree
doctrees/api/: atpthings.util.dictionary.convert_list_to_dict.doctree  atpthings.util.dictionary.get_keys.doctree  atpthings.util.dictionary.get_values.doctree  dictionary.doctree  index.doctree
doctrees/examples/: index.doctree
examples/: index.html
html/: .buildinfo  gettingStarted.html  objects.inv  search.html
html/_sources/: gettingStarted.md.txt
html/_sources/api/: index.rst.txt
html/_static/: documentation_options.js
html/api/: atpthings.util.dictionary.convert_list_to_dict.html  atpthings.util.dictionary.get_keys.html  dictionary.html
html/examples/: index.html
introduction/: index.html
markdown-page/: index.html
scripts/: buildAll.sh  buildPkgConda.sh  dotenv-flow-conda-updateEnvVar.sh  dotenv-flow-conda.sh  parse_sphinx.py  release.sh  runTests.sh  sphinixBuild.sh
sphinx/: requirements.txt
sphinx/source/: atpthings.client_redis.rst  atpthings.rst  atpthings.util.rst  conf.py  index.rst
sphinx/source/api/: atpthings.dict.get_keys.rst  atpthings.dict.get_keys_as_list.rst  atpthings.dict.get_values.rst  atpthings.dict.get_values_from_dict_list.rst  dict.get.rst  (+12 more)
src/atpthings/: __init__.py
tests/: test_atp_dict_convert.py  test_atp_dict_get.py  test_atp_dict_io.py
tests/tmp/: dict_sample_001.json
website/: docusaurus.config.js  package-lock.json  package.json
(+20 files in other folders)
