[metadata]
name = atpthings
version = 0.0.16
author = andrazpolak
author_email = andrazpolak@gmail.com
description = ATP-things python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atp-things/pkg-python-util
project_urls =
    Bug Tracker = https://github.com/atp-things/pkg-python-util/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = atpthings
packages = find:
python_requires = >=3.6

[options.packages.find]
where = atpthings
