[metadata]
name = atpthings
# version = 0.0.33+0.gacf1cc0.dirty.
author = andrazpolak
author_email = andrazpolak@gmail.com
description = ATP-things python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atp-things/pkg-python-util
platforms = any
project_urls =
    Bug Tracker = https://github.com/atp-things/pkg-python-util/issues
    Documentation = https://atp-things.github.io/pkg-python-util/
    Source Code = https://github.com/atp-things/pkg-python-util
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = atpthings
install_requires =
    pymongo
    pandas
    pyyaml

python_requires = >=3.8
include_package_data = True

; [options.packages.find]
; where = atpthings

[versioneer]
VCS = git
style = pep440
versionfile_source = atpthings/_version.py
versionfile_build = atpthings/_version.py
tag_prefix = v
parentdir_prefix = atpthings-
